# OpenGL

./: .gitignore  CMakeLists.txt
OGLDraw/: CMakeLists.txt  OGLDraw.cpp  OGLDraw.h  main.cpp
OGLPyramid/: CMakeLists.txt  OGLPyramid.cpp  OGLPyramid.h  main.cpp
OGLQuad/: CMakeLists.txt  OGLQuad.cpp  OGLQuad.h  main.cpp
